--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,11 @@ body{
     background-color: grey;
 }
 
+.profileimg {
+    border-radius: 50%;
+    background-color: hotpink;
+}
+
 #container {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -19,4 +24,8 @@ body{
 .projects {
     background-color: blue;
     height: 100%;
+}
+
+.profile {
+    margin: 10px;
 }
