--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ html{
 
 body{
     height: 98%;
+    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .sidebar {
@@ -28,4 +29,12 @@ body{
 
 .profile {
     margin: 10px;
+}
+
+button {
+    font-size: 16px;
+    padding: 5px;
+    border-radius: 8px;
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
