--- a/src/styles.css
+++ b/src/styles.css
@@ -72,3 +72,12 @@ button {
 .projects > div{
     margin-left: 10px;
 }
+
+button:hover{
+    background-color: #262626;
+    color: white;
+}
+button:active{
+    position: relative;
+    top: 5px;
+}
